# BenchMark-nuclear

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: sample_eval.yaml
docs/: fermibench_analysis.md  nusafety_design.md
examples/: sample_cases.jsonl
scripts/: had_to_fermi.py  run_benchmark.py
src/nusafety/: __init__.py  config.py  data.py  llm.py  metrics.py  runner.py
tests/: test_metrics.py
